# rust-fmi-export

./: .gitignore  .gitmodules  Makefile  Rectifier.out.csv  Rectifier.out.fmu  Rectifier.out.ipynb  Sine.out.fmu  SineModel.fmu  SineModel.ipynb  launch_rectifier_fmu.py  pyproject.toml  test.fmu  test.ipynb
Rectifier.fmu/: modelDescription.xml
Rectifier.fmu/binaries/darwin64/: Rectifier.dylib
Rectifier.fmu/binaries/win32/: Rectifier.lib
Rectifier.fmu/data/: simRecord.m
Rectifier.fmu/documentation/: _main.html
Rectifier.fmu/sources/: Rectifier.c  fmuTemplate.h
cargo-create-fmu/: Cargo.toml
cargo-create-fmu/src/: main.rs
data/: Rectifier.fmu  Rectifier.ipynb
docs/: getting-started.md
fmi2/: Cargo.toml
fmi2-derive/: Cargo.toml
fmi2-derive/src/: lib.rs
fmi2-sys/: Cargo.toml  build.rs  wrapper.h
fmi2-sys/src/: lib.rs
fmi2/fmi2-derive/: Cargo.toml
fmi2/fmi2-derive/src/: lib.rs
fmi2/src/: lib.rs
sine-derive-fmi/: Cargo.toml  SineModel.ipynb
sine-derive-fmi/src/: lib.rs
sine-fmi-sys/: Cargo.toml  build.rs
sine-fmi-sys/Sine.fmu/: modelDescription.xml
sine-fmi-sys/Sine.fmu/binaries/darwin64/: Sine.dylib
sine-fmi-sys/src/: lib.rs
