
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Christopher Woodall", email = "chris.j.woodall@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "numpy>=1.24.3",
    "scipy>=1.9.3",
    "FMPy>=0.3.15",
    "flask>=2.3.2",
    "dash>=2.9.3",
    "setuptools>=67.8.0",
    "dash-bootstrap-components>=1.4.1",
    "nbformat>=5.9.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.1",
    "plotly>=5.14.1",
    "ipywidgets>=8.0.6",
]
requires-python = ">=3.11"
license = {text = "MIT"}

