[package]
name = "cargo-create-fmu"
license = "MIT"
categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools::build-utils"]
description = "Generate a binary FMU package (.fmu) from Cargo projects"
homepage = ""
readme = "README.md"
keywords = ["fmu", "package", "cargo", "subcommand"]
repository = ""
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
toml = "0.7"
quick-xml = "0.28.2"
cargo_toml = "0.15"
getopts = "0.2"
thiserror = "1"
elf = "0.7"
cargo = "*"
dlopen = "0.1.6"
dlopen_derive = "0.1.3"
zip = "*"
walkdir = "*"